// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AllLoveTypesSection Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-bdVaJa eKALTN"
    >
      <button
        type="button"
      >
        その他の恋愛タイプを表示する
      </button>
      <ul>
        <li>
          非愛タイプ
        </li>
        <li>
          好愛タイプ
        </li>
        <li>
          心酔愛タイプ
        </li>
        <li>
          虚愛タイプ
        </li>
        <li>
          情愛タイプ
        </li>
        <li>
          友愛タイプ
        </li>
        <li>
          愚愛タイプ
        </li>
        <li>
          完全愛タイプ
        </li>
      </ul>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Footer Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-bwzfXH gzVkTE"
    >
      Copyright (c) 2020 nekochans
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Header Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-htpNat eKThty"
    >
      愛の心理学
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Home Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-bxivhb hpEjFr"
    >
      <div
        className="sc-ifAKCX dnQaoC"
      >
        <div
          className="sc-EHOje bLyIPH"
        >
          <h2
            className="sc-bZQynM dEsIoo"
          >
            愛の三角理論
          </h2>
          <p
            className="sc-gzVnrw cBYqzL"
          >
            愛の三角形理論についての解説を追加する。
          </p>
          <p
            className="sc-gzVnrw cBYqzL"
          >
            1行目。あああああああああああああああああああああああああああああああああああああああああああ。
          </p>
          <p
            className="sc-gzVnrw cBYqzL"
          >
            2行目。あああああああああああああああああああああああああああああああああああああああああああ。
          </p>
          <p
            className="sc-gzVnrw cBYqzL"
          >
            3行目。あああああああああああああああああああああああああああああああああああああああああああ。
          </p>
          <p
            className="sc-gzVnrw cBYqzL"
          >
            4行目。あああああああああああああああああああああああああああああああああああああああああああ。
          </p>
        </div>
        <div
          className="sc-dnqmqq dibtlR"
        >
          <div
            className="sc-htoDjs lheqbC"
          >
            <div>
              <h3
                className="sc-iwsKbI jrsefw"
              >
                親密性（intimacy）
              </h3>
              <p
                className="sc-gZMcBi lgsru"
              >
                親密性についての解説を追加する。あああああああああああああああああああああああああああああああああああああああああああ。
              </p>
            </div>
          </div>
          <div
            className="sc-htoDjs lheqbC"
          >
            <div>
              <h3
                className="sc-iwsKbI jrsefw"
              >
                情熱（passion）
              </h3>
              <p
                className="sc-gZMcBi lgsru"
              >
                情熱についての解説を追加する。あああああああああああああああああああああああああああああああああああああああああああ。
              </p>
            </div>
          </div>
          <div
            className="sc-htoDjs lheqbC"
          >
            <div>
              <h3
                className="sc-iwsKbI jrsefw"
              >
                コミットメント（commitment）
              </h3>
              <p
                className="sc-gZMcBi lgsru"
              >
                コミットメントについての解説を追加する。あああああああああああああああああああああああああああああああああああああああああああ。
              </p>
            </div>
          </div>
        </div>
      </div>
      <a
        className="sc-gqjmRU kxnlrV"
        href="/analysis"
        onClick={[Function]}
      >
        <span>
          診断する！
        </span>
      </a>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots NextButton Show Disable 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      className="sc-VigVT eYzSzt"
      disabled={true}
    >
      次へ進む
    </button>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots NextButton Show Enable 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      className="sc-VigVT lhSexz"
      disabled={false}
    >
      次へ進む
    </button>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots QuestionList Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="sc-fjdhpX cVAkfN"
    >
      <li
        className="sc-jzJRlG dThigh"
      >
        <div
          name="1"
        >
          <p
            className="sc-jTzLTM grinHv"
          >
            Q
            1
            . 
            私にとって○○さんとの関係よりも大切なものなど他にはない
          </p>
          <fieldset
            className="sc-cSHVUG exUCJg"
          >
            <ul
              className="sc-kAzzGY cJGzOh"
            >
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={true}
                  className="sc-kgoBCf lhTPJQ"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="1"
                    type="radio"
                    value="1"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  とても当てはまる
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="1"
                    type="radio"
                    value="2"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  やや当てはまる
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="1"
                    type="radio"
                    value="3"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  どちらともいえない
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="1"
                    type="radio"
                    value="4"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  あまり当てはまらない
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="1"
                    type="radio"
                    value="5"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  全く当てはまらない
                </div>
              </li>
            </ul>
          </fieldset>
        </div>
      </li>
      <li
        className="sc-jzJRlG dThigh"
      >
        <div
          name="2"
        >
          <p
            className="sc-jTzLTM grinHv"
          >
            Q
            2
            . 
            私と○○さんとの関わりは揺るぎないものである
          </p>
          <fieldset
            className="sc-cSHVUG exUCJg"
          >
            <ul
              className="sc-kAzzGY cJGzOh"
            >
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="2"
                    type="radio"
                    value="1"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  とても当てはまる
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={true}
                  className="sc-kgoBCf lhTPJQ"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="2"
                    type="radio"
                    value="2"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  やや当てはまる
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="2"
                    type="radio"
                    value="3"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  どちらともいえない
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="2"
                    type="radio"
                    value="4"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  あまり当てはまらない
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="2"
                    type="radio"
                    value="5"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  全く当てはまらない
                </div>
              </li>
            </ul>
          </fieldset>
        </div>
      </li>
      <li
        className="sc-jzJRlG dThigh"
      >
        <div
          name="3"
        >
          <p
            className="sc-jTzLTM grinHv"
          >
            Q
            3
            . 
            ○○さんは私にとって非常に魅力的な人だ
          </p>
          <fieldset
            className="sc-cSHVUG exUCJg"
          >
            <ul
              className="sc-kAzzGY cJGzOh"
            >
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="3"
                    type="radio"
                    value="1"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  とても当てはまる
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="3"
                    type="radio"
                    value="2"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  やや当てはまる
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="3"
                    type="radio"
                    value="3"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  どちらともいえない
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="3"
                    type="radio"
                    value="4"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  あまり当てはまらない
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="3"
                    type="radio"
                    value="5"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  全く当てはまらない
                </div>
              </li>
            </ul>
          </fieldset>
        </div>
      </li>
      <li
        className="sc-jzJRlG dThigh"
      >
        <div
          name="4"
        >
          <p
            className="sc-jTzLTM grinHv"
          >
            Q
            4
            . 
            ○○さんとの関係は居心地のよいものである
          </p>
          <fieldset
            className="sc-cSHVUG exUCJg"
          >
            <ul
              className="sc-kAzzGY cJGzOh"
            >
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="4"
                    type="radio"
                    value="1"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  とても当てはまる
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="4"
                    type="radio"
                    value="2"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  やや当てはまる
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="4"
                    type="radio"
                    value="3"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  どちらともいえない
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="4"
                    type="radio"
                    value="4"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  あまり当てはまらない
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="4"
                    type="radio"
                    value="5"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  全く当てはまらない
                </div>
              </li>
            </ul>
          </fieldset>
        </div>
      </li>
      <li
        className="sc-jzJRlG dThigh"
      >
        <div
          name="5"
        >
          <p
            className="sc-jTzLTM grinHv"
          >
            Q
            5
            . 
            ○○さんについて空想にふけることがある
          </p>
          <fieldset
            className="sc-cSHVUG exUCJg"
          >
            <ul
              className="sc-kAzzGY cJGzOh"
            >
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="5"
                    type="radio"
                    value="1"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  とても当てはまる
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="5"
                    type="radio"
                    value="2"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  やや当てはまる
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="5"
                    type="radio"
                    value="3"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  どちらともいえない
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="5"
                    type="radio"
                    value="4"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  あまり当てはまらない
                </div>
              </li>
              <li
                className="sc-chPdSV smJbf"
              >
                <label
                  checked={false}
                  className="sc-kgoBCf gyPsbY"
                >
                  <input
                    className="sc-kpOJdX gAkwyS"
                    name="5"
                    type="radio"
                    value="5"
                  />
                </label>
                <div
                  className="sc-kGXeez cDnDHU"
                >
                  全く当てはまらない
                </div>
              </li>
            </ul>
          </fieldset>
        </div>
      </li>
    </ul>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots ResultSection Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-dxgOiQ MKfDU"
    >
      <p
        className="sc-ckVGcZ gUOmEG"
      >
        あなたの恋人や片思いの人への愛の形は
      </p>
      <div
        className="sc-jKJlTe bGAEGQ"
      >
        <h3
          className="sc-eNQAEJ cIyJoi"
        >
          非愛タイプ
        </h3>
        <p
          className="sc-hMqMXs euCUOz"
        >
          全ての要素が足りない。表面的な人間関係
        </p>
        <p
          className="sc-hMqMXs euCUOz"
        >
          恋愛タイプに関するメッセージ等を記載する。あああああああああああああああああああああああああああああああああああああああああああああああ。
        </p>
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;
